deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeting-deployment
  labels:
    app: greeting-app
spec:
  selector:
    matchLabels:
      app: greeting-app
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: greeting-app
    spec:
      containers:            
        - image: alexandera3/greeting-service:0.2.0
          name: main
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 3
