deploy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: greeting-service
spec:
  selector:
    app: greeting-app
  ports:
    - port: 8000
